# cfl-library

./: .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon  buildAll.bat  build_gcc.sh  build_linux.sh  build_maven.bat  build_mingw.bat  build_windows.bat  conanfile.py  pom.xml
.github/workflows/: cmake-multi-platform.yml
cfl-headers/: pom.xml
cfl-headers/src/main/headers/: cfl_array.h  cfl_atomic.h  cfl_bitmap.h  cfl_btree.h  cfl_buffer.h  cfl_date.h  cfl_error.h  cfl_event.h  cfl_hash.h  cfl_ints.h  cfl_iterator.h  cfl_list.h  cfl_llist.h  cfl_lock.h  cfl_log.h  cfl_map.h  cfl_map_str.h  cfl_mem.h  cfl_number.h  cfl_os.h  cfl_process.h  cfl_socket.h  cfl_sql.h  cfl_str.h  cfl_sync_queue.h  cfl_thread.h  cfl_types.h
cfl-lib/: pom.xml
cfl-lib/src/main/c/: cfl_array.c  cfl_atomic.c  cfl_bitmap.c  cfl_btree.c  cfl_buffer.c  cfl_date.c  cfl_error.c  cfl_event.c  cfl_hash.c  cfl_iterator.c  cfl_list.c  cfl_llist.c  cfl_lock.c  cfl_log.c  cfl_map.c  cfl_map_str.c  cfl_mem.c  cfl_number.c  cfl_process.c  cfl_socket.c  cfl_sql.c  cfl_str.c  cfl_sync_queue.c  cfl_thread.c
distribution/: pom.xml  releaseAll.bat
tests/: CMakeLists.txt  cfl_test.h  test_cfl_array.c  test_cfl_atomic.c  test_cfl_bitmap.c  test_cfl_btree.c  test_cfl_buffer.c  test_cfl_date.c  test_cfl_error.c  test_cfl_event.c  test_cfl_hash.c  test_cfl_iterator.c  test_cfl_list.c  test_cfl_llist.c  test_cfl_lock.c  test_cfl_log.c  test_cfl_map.c  test_cfl_map_str.c  test_cfl_mem.c  test_cfl_number.c  test_cfl_os.c  test_cfl_process.c  test_cfl_socket.c  test_cfl_sql.c  test_cfl_str.c  test_cfl_sync_queue.c  test_cfl_thread.c
